# TigerSpot

./: .env.example  .gitignore  .prettierignore  .prettierrc  PLAN.md  README.md  alembic.ini  app.py  dev.py  docker-compose.yml  init_database.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  seed_pictures.py
.github/workflows/: deploy.yml
BackEnd/: distance_func.py  points.py  runserver.py
BackEnd/Databases/: challenges_database.py  daily_user_database.py  database.py  matches_database.py  pictures_database.py  user_database.py  versus_database.py
alembic/: env.py
alembic/versions/: 2df915a8c6ec_initial_migration.py  4cf15f9fdaf9_initial_migration.py  5b7f4f0b6a1e_add_admin_column_to_users.py  6cfc1ac9d42c_add_first_played_to_usersdaily.py  74e63e0c8e89_add_name_and_year_to_users_table.py
apps/frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/server/: .env.example  pnpm-lock.yaml
deployment/: README.md  deploy.sh  ecosystem.config.cjs  frontend.env.example  server.env.example  setup.sh
deployment/github-actions/: ci.yml  deploy.yml
deployment/nginx/: tigerspot.conf
docs/: bracket.md  refactoring.md
legacy/: dev.py  docker-compose.yml  fix_challenges.py  init_database.py
server/: .env.example  package.json  pnpm-lock.yaml
src/: admin.py  cloud.py  db.py  models.py  points.py  runserver.py
templates/: gamepage.html  leaderboard.html  menu.html  navbar.html  rules.html  team.html  totalboard.html
tigerspot-new/: docker-compose.yml  package.json  pnpm-lock.yaml  vite.config.ts
(+170 files in other folders)
